[package]
name = "bint"
description = "Bounded Integer in Rust."
version = "0.1.6"
rust-version = "1.56.0"
edition = "2018"
authors = ["electronicpanopticon <gaoler@electronicpanopticon.com>"]
repository = "https://github.com/electronicpanopticon/bint-rs.git"
homepage = "https://github.com/electronicpanopticon/bint-rs"
license = "MIT"
readme = "README.md"
